Closed Bug 569514 Opened 14 years ago Closed 14 years ago

-graphicssystem cmdline argument does not work anymore

Categories

(Core Graveyard :: Widget: Qt, defect)

Other
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

(Keywords: regression)

Attachments

(1 file)

CheckArg for graphicssystem argument called without specifying removeArg = PR_FALSE value, and by default it is true...
As result QApplication does not have graphicssystem arg after CheckArg call
Attachment #448676 - Flags: review?(dougt)
Attachment #448676 - Flags: review?(dougt) → review+
Keywords: checkin-needed
Assignee: nobody → romaxa
Keywords: regression
Summary: -graphicssystem cmdline argument does not work anymore... regression → -graphicssystem cmdline argument does not work anymore
Somebody landed this without updating the bug.

http://hg.mozilla.org/mozilla-central/rev/954976d8dd3b
Status: NEW → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: