Bug 569514 - graphicssystem cmdline argument does not work anymore. r=dougt